# CCBB-CPP-Sim

./: .gitignore  .gitlab-ci.yml  BoardDieRollTest_Review.txt  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  README.md  cmake_install.cmake  main.cpp  test_ccbb
CCPP_Sim/: BlackSpace.cpp  BlackSpace.hpp  Board.cpp  Board.hpp  CCPP_Sim-Bridging-Header.h  CircularRoute.cpp  CircularRoute.hpp  ColoredSpace.cpp  ColoredSpace.hpp  JumpSpace.cpp  JumpSpace.hpp  LinearRoute.cpp  LinearRoute.hpp  Player.cpp  Player.hpp  Route.cpp  Route.hpp  Space.cpp  Space.hpp  WheelSpace.cpp  WheelSpace.hpp  main.swift
CCPP_Sim.xcodeproj/: project.pbxproj
CCPP_Sim.xcodeproj/xcuserdata/frezza.xcuserdatad/xcschemes/: xcschememanagement.plist
CCPP_Sim/src/: BlackSpace.cpp.d  BlackSpace.hpp  Board.cpp.d  Board.hpp  CircularRoute.cpp  CircularRoute.cpp.d  ColoredSpace.cpp.d  ColoredSpace.hpp  JumpSpace.cpp.d  LinearRoute.cpp.d  LinearRoute.hpp  MagicButton.hpp  Player.cpp.d  Player.hpp  Route.cpp.d  Route.hpp  Space.cpp.d  Space.hpp  WheelSpace.cpp  WheelSpace.cpp.d  main.cpp.d
src/: AutoSim.cpp  AutoSim.hpp  BlackSpace.cpp  Board.cpp  Board.hpp  CMakeLists.txt  CircularRoute.cpp  ColoredSpace.cpp  LinearRoute.cpp  LinearRoute.hpp  MagicButton.cpp  MagicButton.hpp  Makefile  Move.cpp  Move.hpp  Route.cpp  Route.hpp  Space.cpp  cmake_install.cmake  main.cpp
test/: PlayerTest.cpp  PlayerTestResults.txt
test_ccbb.dSYM/Contents/: Info.plist
test_ccbb.dSYM/Contents/Resources/DWARF/: test_ccbb
tests/: AllTests.cpp  AutoSimTests.cpp  BlackSpaceTest.cpp  BoardDieRollTest.cpp  BoardPropertyTests.cpp  BoardTest.cpp  CMakeLists.txt  CSVParser.hpp  CTestTestfile.cmake  CircularRouteTest.cpp  ColoredSpaceTest.cpp  JumpSpaceTest.cpp  LinearRouteTest.cpp  MagicButtonTest.cpp  Makefile  MoveClassTests.cpp  PlayerTest.cpp  PlayerTest.hpp  PlayerTestResults.txt  RoutePropertyTest.cpp  WheelSpaceTest.cpp  WheelSpace_Test.cpp  board_test.cpp  cmake_install.cmake
